第一个版本
提交微信审核

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/analysis/analysis",
     "pages/mine/mine",
     "pages/login/login",
-    "pages/create/create"
+    "pages/create/create",
+    "pages/bind/bind"
   ],
   "window": {
     "backgroundTextStyle": "dark",
