--- a/project.config.json
+++ b/project.config.json
@@ -25,7 +25,14 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": -1,
+					"name": "mine",
+					"pathName": "pages/mine/mine",
+					"query": ""
+				}
+			]
 		}
 	}
 }
