--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -47,6 +47,12 @@
 					"name": "create",
 					"pathName": "pages/create/create",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "分析",
+					"pathName": "pages/analysis/analysis",
+					"scene": null
 				}
 			]
 		}
